apps/webhook_router/src/adapters/snapshots/webhook_router__adapters__http__tests__adapters_http_ingress.snap
---
source: apps/webhook_router/src/adapters/http.rs
expression: "json!({\n    \"id\": event.id, \"source\": event.source, \"timestamp\": event.timestamp,\n    \"title\": event.title, \"markdown\": event.markdown, \"meta\": event.meta,\n    \"raw\": event.raw,\n})"
---
id: evt-1
markdown: hello
meta: {}
raw:
  id: evt-1
  markdown: hello
  timestamp: 123
source: custom
timestamp: 123
title: ~
