apps/webhook_router/src/adapters/snapshots/webhook_router__adapters__http__tests__adapters_http_uem_to_egress.snap
---
source: apps/webhook_router/src/adapters/http.rs
expression: "json!({ \"content_type\": payload.content_type, \"body\": payload.body, })"
---
body:
  id: evt-1
  markdown: hello
  meta: {}
  raw: {}
  source: custom
  timestamp: 1
  title: ~
content_type: application/json
